--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ Thumbs.db
 
 # Private documentation (Pablo's internal docs)
 docs/
+# Exception: public evaluation dialogue linked from README
+!docs/evaluation-dialogue.md
 
 # Personal context folder (private user data)
 server/orpheus/config/
