--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
     "axios": "^1.13.2",
+    "chromadb": "^3.1.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "openai": "^6.10.0"
   }
 }
